--- a/src/composer.json
+++ b/src/composer.json
@@ -10,12 +10,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "bacon/bacon-qr-code": "*",
+        "bacon/bacon-qr-code": "^3.0",
         "barryvdh/laravel-dompdf": "^3.1",
         "laravel/framework": "^11.31",
         "laravel/socialite": "^5.21",
         "laravel/tinker": "^2.9",
         "maatwebsite/excel": "^3.1",
+        "pragmarx/google2fa": "^8.0",
         "pragmarx/google2fa-laravel": "*"
     },
     "require-dev": {
